Display Time by clicking a button

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h2>My First JavaScript</h2>
+    <h2>My 2nd JS/TS Program</h2>
 
-    <p id="demo">Alrae</p>
+    <p id="date">Alrae</p>
 
-    <button type="button" onclick="changeName()">Click Me!</button>
+    <button type="button" onclick="displayCurrentTime()">Click Me!</button>
   </body>
   <script src="javascript files/TimeButton.js"></script>
 </html>
