Added 1 fundamental exercise

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <body>
     <h2>My 2nd JS/TS Program</h2>
 
-    <p id="date">Alrae</p>
+    <p id="text">Alrae</p>
 
-    <button type="button" onclick="displayCurrentTime()">Click Me!</button>
+    <button type="button" onclick="hideText()">Click Me!</button>
   </body>
-  <script src="javascript files/TimeButton.js"></script>
+  <script src="javascript files/HideText.js"></script>
 </html>
