--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <p id="text">Alrae</p>
 
-    <button type="button" onclick="hideText()">Click Me!</button>
+    <button type="button" onclick="hideText()">Hide Me!</button>
+    <button type="button" onclick="showText()">Show Me!</button>
   </body>
   <script src="javascript files/HideText.js"></script>
 </html>
