--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <button type="button" onclick="hideText()">Hide Me!</button>
     <button type="button" onclick="showText()">Show Me!</button>
+    <button type="button" onclick="document.write(5+6)">Try</button>  
+
   </body>
-  <script src="javascript files/HideText.js"></script>
+  <script src="javascript files/Alert.js"></script>
 </html>
