--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <button type="button" onclick="hideText()">Hide Me!</button>
     <button type="button" onclick="showText()">Show Me!</button>
     <button type="button" onclick="document.write(5+6)">Try</button>  
+    <button onclick="window.print()">Print this page</button>
 
   </body>
   <script src="javascript files/Alert.js"></script>
