--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
     <p id="text">Alrae</p>
 
+    <button onclick="changeSize()">Change size</button>
     <button type="button" onclick="hideText()">Hide Me!</button>
     <button type="button" onclick="showText()">Show Me!</button>
-    <button type="button" onclick="document.write(5+6)">Try</button>  
+    <button type="button" onclick="document.write(5+6)">Try</button>
     <button onclick="window.print()">Print this page</button>
-
   </body>
   <script src="javascript files/Alert.js"></script>
+  <script src="javascript files/HideText.js"></script>
 </html>
