--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <p id="text">Alrae</p>
     <p id="number"></p>
+    <p id="alphabet"></p>
 
     <button onclick="changeSize()">Change size</button>
     <button type="button" onclick="hideText()">Hide Me!</button>
@@ -20,5 +21,8 @@
     let a = 5;
     let x = (150 + 50) * a;
     document.getElementById("number").innerHTML = x;
+
+    let text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+    document.getElementById("alphabet").innerHTML = text.length;
   </script>
 </html>
