--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="practice"></div>
+    <a href="mailto:someone@example.com">Send email</a>
+
 </body>
-<script src="IIFE.js"></script>
 </html>
