--- a/default.html
+++ b/default.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="practice"></div>
+    
+    <p id = cars></p>
+
+    <script src="javascript files/Cars.js"></script>
 </body>
-<script src="IIFE.js"></script>
 </html>
